Salesforce_Server/src/objects/Releases__c.object
<CustomObject>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleaseName__c</fullName>
        <label>ReleaseName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReleaseStatus__c</fullName>
        <formula>TEXT(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Releases</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testQueue_Releases</fullName>
        <filterScope>Queue</filterScope>
        <label>testQueue</label>
        <queue>testQueue</queue>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>DeployedRelease</fullName>
        <active>true</active>
        <label>DeployedRelease</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpenRelease</fullName>
        <active>true</active>
        <label>OpenRelease</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Release_Name_Change_in_Active_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Name) , TEXT( Status__c)==&apos;Active&apos;)</errorConditionFormula>
        <errorMessage>You are not allow to change name of Active release.</errorMessage>
    </validationRules>
</CustomObject>